# cmake

./: readme.txt
cmake_rules/: CMakeLists.txt
out_of_source编译/: CMakeLists.txt  build.sh
优化库名/: CMakeLists.txt  build.sh
单个源文件/: CMakeLists.txt
多个源文件/: CMakeLists.txt  build.sh  hello.c  main.c
生成库/: CMakeLists.txt  hello.h
生成库和执行文件单独放置/: CMakeLists.txt
生成库和执行文件单独放置/src/: CMakeLists.txt
项目分目录管理/libhello/: CMakeLists.txt
项目分目录管理/src/: CMakeLists.txt
